# epsilon

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
data/meshes/: SM_Triangle.mtl
data/shaders/: screen.fs  screen.vs
src/: Mesh.h  Rasterizer.cpp  Rasterizer.h  Screen.cpp  Screen.h  Texture.h  Vectors.h  Window.cpp  Window.h  main.cpp  pch.h
src/Core/: Colors.h  Maths.cpp  Maths.h  Vectors.h
